set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
cmake_minimum_required(VERSION 2.6)
add_subdirectory(./lib/tomcrypt)
add_subdirectory(./lib/tnl)
add_subdirectory(./lib/gtest)
add_subdirectory(./src)
add_subdirectory(./test)

string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}" _insource)
if (_insource)
	message(SEND_ERROR "You must run \"cmake ..\" from the \"build\" directory")
	message(FATAL_ERROR "Remove the file CMakeCache.txt in ${CMAKE_SOURCE_DIR} first.")
endif (_insource)
